# wasm-aggr

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
aggr/: Cargo.toml
aggr/src/: host_log.rs  lib.rs
aggr/src/host_log/: mock.rs  wasm32.rs
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/src/: main.rs  wasm32.rs
server/src/wasm32/: errors.rs  helpers.rs  memory.rs
server/wit/: aggr.wit
wasm-module/: Cargo.toml
wasm-module/src/: host_log.rs  lib.rs
wasm-module/src/host_log/: wasm32.rs
wasm-module/wit/: world.wit
