[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
wasmtime = { version = "16.0.0", features = ["component-model"] }
wasmtime-wasi = { version = "16.0.0" }
wasi-cap-std-sync = { version = "16.0.0" }
arrow = "49.0"
size = "0.4.1"
log = "0.4.20"
simplelog = "0.12.1"
thiserror = "1.0.52"
anyhow = "1.0.72"

