[package]
name = "aggr"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[build]
target = "wasm32-unknown-unknown"

[dependencies]
cargo-component-bindings = "0.6.0"
arrow = "49.0"
thiserror-no-std = "2.0.2"

[package.metadata.component]
package = "component:aggr"

[package.metadata.component.dependencies]
