[package]
name = "aggr"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
cargo-component-bindings = "0.6.0"
arrow = { version = "49.0", features = ["ipc"], default-features = false }
thiserror-no-std = "2.0.2"

[build]
target = "wasm32-unknown-unknown"

[package.metadata.component]
package = "component:aggr"

[package.metadata.component.dependencies]

[profile.release]
lto = true
opt-level = 's'
